--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 mensaje: document.getElementById("mensaje").value
             };
 
-            fetch("TU_NUEVA_URL_DEL_SCRIPT", { // Reemplázalo con la URL de tu script
+            fetch("https://script.google.com/macros/s/AKfycbxd6rZRSXFnj275V4BO6O3f9skLCCkM7UUObYafazmhuOUe9dnlxCMMQGIYNXbJPzaO/exec", { // Reemplázalo con la URL de tu script
                 method: "POST",
                 mode: "no-cors",
                 headers: {
