--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario a Google Sheets</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -18,75 +12,57 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            width: 100vw;
+            margin: 0;
         }
 
         .container {
             background: white;
-            padding: 2vw; /* Ajuste dinámico */
+            padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 450px; /* Máximo ancho */
-            text-align: center;
+            width: 100%;
+            max-width: 400px;
         }
 
         h2 {
-            font-size: 2vw;
+            text-align: center;
             color: #333;
         }
 
         label {
             font-weight: bold;
             display: block;
-            margin-top: 1vw;
-            font-size: 1.2vw;
+            margin-top: 10px;
         }
 
         input, textarea {
             width: 100%;
-            padding: 1vw;
-            margin-top: 0.5vw;
+            padding: 8px;
+            margin-top: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            font-size: 1vw;
+            font-size: 16px;
         }
 
         textarea {
             resize: none;
-            height: 8vh;
+            height: 80px;
         }
 
         button {
             width: 100%;
             background-color: #28a745;
             color: white;
-            padding: 1vw;
-            margin-top: 2vw;
+            padding: 10px;
+            margin-top: 15px;
             border: none;
             border-radius: 5px;
-            font-size: 1.2vw;
+            font-size: 16px;
             cursor: pointer;
         }
 
         button:hover {
             background-color: #218838;
-        }
-
-        /* Ajustes para pantallas pequeñas */
-        @media (max-width: 600px) {
-            h2 {
-                font-size: 5vw;
-            }
-
-            label, input, textarea, button {
-                font-size: 4vw;
-            }
-
-            .container {
-                padding: 4vw;
-                max-width: 95%;
-            }
         }
     </style>
     <script>
@@ -119,7 +95,7 @@
 <body>
     <div class="container">
         <h2>Enviar datos a Google Sheets</h2>
-        <form id="formulario">
+        <form id="formulario" onsubmit="event.preventDefault(); enviarDatos();">
             <label>Código:</label>
             <input type="text" id="codigo" required>
             
