--- a/index.html
+++ b/index.html
@@ -3,156 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario a Google Sheets</title>
+    <title>Gestión de Stock</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #74ebd5, #ACB6E5);
             display: flex;
-            justify-content: center;
+            height: 100vh;
             align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
+            justify-content: center;
         }
-
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        .form-container {
+            background: #fff;
+            padding: 30px 40px;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
             width: 100%;
-            max-width: 500px;
-            box-sizing: border-box;
+            max-width: 400px;
         }
-
-        h2 {
+        .form-container h2 {
             text-align: center;
+            margin-bottom: 20px;
             color: #333;
         }
-
-        label {
-            font-weight: bold;
-            display: block;
-            margin-top: 10px;
-        }
-
-        input, textarea {
+        input {
             width: 100%;
-            padding: 10px;
-            margin-top: 5px;
+            padding: 10px 12px;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-            box-sizing: border-box;
+            border-radius: 8px;
+            transition: border-color 0.3s;
         }
-
-        textarea {
-            resize: none;
-            height: 80px;
+        input:focus {
+            border-color: #74ebd5;
+            outline: none;
         }
-
         button {
             width: 100%;
-            background-color: #28a745;
-            color: white;
-            padding: 12px;
-            margin-top: 15px;
+            background: #74ebd5;
             border: none;
-            border-radius: 5px;
+            color: #fff;
+            padding: 12px;
+            border-radius: 10px;
             font-size: 16px;
             cursor: pointer;
             transition: background 0.3s;
         }
-
         button:hover {
-            background-color: #218838;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 15px;
-            }
-
-            input, textarea {
-                font-size: 14px;
-                padding: 8px;
-            }
-
-            button {
-                padding: 10px;
-                font-size: 14px;
-            }
+            background: #62d3c0;
         }
     </style>
-    <script>
-        function actualizarStock() {
-            let stockActual = parseInt(document.getElementById("stock").value) || 0;
-            let entrada = parseInt(document.getElementById("entrada_stock").value) || 0;
-            let salida = parseInt(document.getElementById("salida_stock").value) || 0;
-
-            let nuevoStock = stockActual + entrada - salida;
-            if (nuevoStock < 0) {
-                alert("El stock no puede ser negativo.");
-                return;
-            }
-            document.getElementById("stock").value = nuevoStock;
-        }
-
-        function enviarDatos() {
-            let formData = {
-                codigo: document.getElementById("codigo").value,
-                descripcion: document.getElementById("descripcion").value,
-                stock: document.getElementById("stock").value,
-                entrada_stock: document.getElementById("entrada_stock").value,
-                salida_stock: document.getElementById("salida_stock").value,
-                box: document.getElementById("box").value,
-                rack: document.getElementById("rack").value,
-                mensaje: document.getElementById("mensaje").value
-            };
-
-            fetch("https://script.google.com/macros/s/AKfycbxd6rZRSXFnj275V4BO6O3f9skLCCkM7UUObYafazmhuOUe9dnlxCMMQGIYNXbJPzaO/exec", {
-                method: "POST",
-                mode: "no-cors",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(formData)
-            }).then(() => {
-                alert("Datos enviados con éxito.");
-                document.getElementById("formulario").reset();
-            }).catch(error => console.log(error));
-        }
-    </script>
 </head>
 <body>
-    <div class="container">
-        <h2>Enviar datos a Google Sheets</h2>
-        <form id="formulario" onsubmit="event.preventDefault(); enviarDatos();">
-            <label for="codigo">Código:</label>
-            <input type="text" id="codigo" required>
-            
-            <label for="descripcion">Descripción:</label>
-            <input type="text" id="descripcion" required>
-
-            <label for="stock">Stock:</label>
-            <input type="number" id="stock" required readonly>
-
-            <label for="entrada_stock">Entrada de Stock:</label>
-            <input type="number" id="entrada_stock" oninput="actualizarStock()">
-
-            <label for="salida_stock">Salida de Stock:</label>
-            <input type="number" id="salida_stock" oninput="actualizarStock()">
-
-            <label for="box">Box:</label>
-            <input type="text" id="box" required>
-
-            <label for="rack">Rack:</label>
-            <input type="text" id="rack" required>
-
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" required></textarea>
-            
+    <div class="form-container">
+        <h2>Gestión de Stock</h2>
+        <form id="form">
+            <input placeholder="Código" id="codigo" required>
+            <input placeholder="Descripción" id="descripcion" required>
+            <input type="number" placeholder="Entrada de stock" id="entrada">
+            <input type="number" placeholder="Salida de stock" id="salida">
+            <input placeholder="Rack" id="rack" required>
+            <input placeholder="Box" id="box" required>
             <button type="submit">Enviar</button>
         </form>
     </div>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyMxRV0gnhF2_hNswlXSVmOGFQndEFvEbUET8wFzvxbtHNVM_4r5M49VACWNmjPke3egw/exec'; // tu URL del Apps Script
+
+        const entradaInput = document.getElementById('entrada');
+        const salidaInput = document.getElementById('salida');
+
+        entradaInput.addEventListener('input', () => {
+            salidaInput.disabled = entradaInput.value !== "";
+        });
+
+        salidaInput.addEventListener('input', () => {
+            entradaInput.disabled = salidaInput.value !== "";
+        });
+
+        document.getElementById('form').addEventListener('submit', e => {
+            e.preventDefault();
+
+            const entradaValue = entradaInput.value.trim();
+            const salidaValue = salidaInput.value.trim();
+
+            if (entradaValue === "" && salidaValue === "") {
+                alert("Debes ingresar una entrada o una salida de stock.");
+                return;
+            }
+
+            let salidaNegativa = "0";
+            if (salidaValue) {
+                salidaNegativa = `-${Math.abs(parseInt(salidaValue))}`;
+                const confirmarSalida = confirm(`Vas a registrar una salida de ${salidaNegativa} unidades. ¿Confirmás?`);
+                if (!confirmarSalida) return;
+            }
+
+            const data = {
+                codigo: document.getElementById('codigo').value,
+                descripcion: document.getElementById('descripcion').value,
+                entrada: entradaValue || "0",
+                salida: salidaNegativa,
+                rack: document.getElementById('rack').value,
+                box: document.getElementById('box').value
+            };
+
+            fetch(scriptURL, {
+                method: 'POST',
+                body: JSON.stringify(data),
+                mode: 'no-cors',
+                headers: { 'Content-Type': 'application/json' }
+            })
+            .then(() => {
+                alert('Datos enviados correctamente');
+                document.getElementById('form').reset();
+                entradaInput.disabled = false;
+                salidaInput.disabled = false;
+            })
+            .catch(error => alert('Error al enviar: ' + error.message));
+        });
+    </script>
 </body>
 </html>
