--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <input placeholder="Box" id="box" required>
             <button type="submit">Enviar</button>
         </form>
+        <a href="buscador.html">
+            <button class="buscar-button">Buscar</button>
+        </a>
     </div>
 
     <script>
