--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 "MPR313": "Cubre tanque (Negro)",
 "MPR317": "Guardabarros delantero (Negro)",
 "KPPPS2-T": "Guardabarros trasero",
-"MPR383": "Cubrebarral izquierdo (NEGRO) ABS";
-"MPR382": "Cubrebarral derecho (NEGRO) ABS";
-"MPR384": "Escudos (NEGRO) ABS";
-"MPR388": "Porta optica (NEGRO) ABS";
-"MPR385": "Guardabarro delantero (NEGRO) ABS";
-"MPR386": "Lateral derecho (NEGRO) ABS";
-"MPR387": "Lateral izquierdo (NEGRO) ABS";
+"MPR383": "Cubrebarral izquierdo (NEGRO) ABS",
+"MPR382": "Cubrebarral derecho (NEGRO) ABS",
+"MPR384": "Escudos (NEGRO) ABS",
+"MPR388": "Porta optica (NEGRO) ABS",
+"MPR385": "Guardabarro delantero (NEGRO) ABS",
+"MPR386": "Lateral derecho (NEGRO) ABS",
+"MPR387": "Lateral izquierdo (NEGRO) ABS",
 "AMB11001-T": "ASIENTO MOTOMEL BLITZ",
 "AMB11002-T": "ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T": "ASIENTO MOTOMEL BLITZ PLUS",
