--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
 "MPR385": "Guardabarro delantero (NEGRO) ABS",
 "MPR386": "Lateral derecho (NEGRO) ABS",
 "MPR387": "Lateral izquierdo (NEGRO) ABS",
+"PIN383": "Cubrebarral izquierdo (NEGRO) ABS",
+"PIN382": "Cubrebarral derecho (NEGRO) ABS",
+"PIN384": "Escudos (NEGRO) ABS",
+"PIN388": "Porta optica (NEGRO) ABS",
+"PIN385": "Guardabarro delantero (NEGRO) ABS",
+"PIN386": "Lateral derecho (NEGRO) ABS",
+"PIN387": "Lateral izquierdo (NEGRO) ABS",
 "AMB11001-T": "ASIENTO MOTOMEL BLITZ",
 "AMB11002-T": "ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T": "ASIENTO MOTOMEL BLITZ PLUS",
