--- a/index.html
+++ b/index.html
@@ -38,19 +38,10 @@
             border-color: #74ebd5;
             outline: none;
         }
-        button {
-            width: 50%;
-            background: #74ebd5;
-            border: none;
-            color: #fff;
-            padding: 12px;
-            border-radius: 10px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s;
-            display: block;
-            margin: 0 auto;
-        }
+button {
+    all: unset;
+    cursor: pointer;
+}
         button:hover {
             background: #62d3c0;
         }
