--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
             outline: none;
         }
 button {
-    all: unset;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    color: inherit;
+    font: inherit;
     cursor: pointer;
 }
         button:hover {
