--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
             outline: none;
         }
 button {
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    color: inherit;
-    font: inherit;
+    background-color: #e0e0e0;
+    border: 1px solid #aaa;
+    padding: 6px 12px;
+    font-size: 14px;
+    color: #000;
     cursor: pointer;
 }
         button:hover {
