--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button {
     cursor: pointer;
 }
         button:hover {
-            background: #e0e0e0;
+            background: pointer;
         }
     </style>
 </head>
