--- a/index.html
+++ b/index.html
@@ -38,16 +38,17 @@
             border-color: #74ebd5;
             outline: none;
         }
-button {
-    background-color: #e0e0e0;
-    border: 1px solid #aaa;
-    padding: 6px 12px;
-    font-size: 14px;
-    color: #000;
-    cursor: pointer;
-}
+        button {
+            background-color: #e0e0e0;
+            border: 1px solid #ccc;
+            padding: 8px 16px;
+            color: #000;
+            font: inherit;
+            border-radius: 4px;
+            cursor: pointer;
+        }
         button:hover {
-            background: pointer;
+            background-color: #d5d5d5;
         }
     </style>
 </head>
