--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 "MPR11": "GUARDABARROS TRASERO (A)",
 "MPR394": "BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
 "MPR128": "BASE DE ASIENTOS",
-"MPR10": "POLLERA (A)  PLÁSTICOS NACIONALES / POLLERA (B)",
+"MPR10": "POLLERA (B)",
 "MPR12": "BAULERA (B)",
 "MPR389": "BAULERA (B) PLUS",
+"MPR395": "POLLERA (A) PLÁSTICOS NACIONALES",
 "MPR15": "TAPA BATERÍA ALTA",
 "MPR9": "TAPA N° DE CHASIS (B)",
 "MPR16": "TAPA DE CERRADURA (A)",
