--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 "PIN385": "Guardabarro delantero (NEGRO) ABS",
 "PIN386": "Lateral derecho (NEGRO) ABS",
 "PIN387": "Lateral izquierdo (NEGRO) ABS",
+"FILT444": "FILTRO ARMADO",
 "AMB11001-T": "ASIENTO MOTOMEL BLITZ",
 "AMB11002-T": "ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T": "ASIENTO MOTOMEL BLITZ PLUS",
