--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 "ABV302C-T": "ASIENTO V302C",
 "ASJOY300-T": "ASIENTO JOYRIDE 300",
 "ATSLALOMP110": "ASIENTO SLALOM P110",
+"AISPOT-T": "ASIENTO SPOT S150",
 "MPR127.": "PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218": "PP RANDOM 10R10C ESENTTIA",
 "MPR361": "PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
