--- a/buscador.html
+++ b/buscador.html
@@ -10,30 +10,24 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #f3f4f7, #e8ecf1);
       margin: 0;
-      padding-top: 70px; /* espacio para menú fijo */
+      padding-top: 70px;
       color: #333;
     }
-
-.menu-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #4a77d4;
-  display: flex;
-  justify-content: flex-start; /* Cambiado de center */
-  align-items: center;
-  padding: 0 20px; /* Espaciado interno */
-  z-index: 1000;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
-
-.logo {
-  height: 40px;
-  margin-right: 350px; /* Espacio entre logo y botones */
-}
-
-
+    .menu-bar {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      background-color: #4a77d4;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 0 20px;
+      z-index: 1000;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .logo {
+      height: 40px;
+      margin-right: 350px;
+    }
     .menu-bar button {
       background: none;
       color: white;
@@ -42,22 +36,18 @@
       font-size: 1rem;
       cursor: pointer;
       transition: background-color 0.3s;
-      border-right: 1px solid rgba(255, 255, 255, 0.3);
+      border-right: 1px solid rgba(255,255,255,0.3);
     }
-
     .menu-bar button:last-child {
       border-right: none;
     }
-
     .menu-bar button:hover {
       background-color: #355fb4;
     }
-
     h1 {
       text-align: center;
       color: #4a4a4a;
     }
-
     .container {
       background-color: white;
       max-width: 900px;
@@ -66,62 +56,57 @@
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.08);
     }
-
     input[type="file"] {
       display: block;
-      margin: 20px auto;
+      margin: 20px auto 10px auto;
       padding: 8px;
     }
-
     .search-container {
       text-align: right;
       margin-bottom: 10px;
     }
-
     .search-container input {
       padding: 7px 10px;
       border: 1px solid #ccc;
       border-radius: 6px;
-      width: 250px;
+      width: 300px;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
     }
-
     th, td {
       border: 1px solid #ccc;
       padding: 8px 10px;
       text-align: center;
     }
-
     th {
       background-color: #f4f6f8;
       color: #444;
     }
-
     tr:nth-child(even) {
       background-color: #f9fafc;
     }
-
     .result-title {
       text-align: center;
       margin-top: 40px;
       font-size: 1.3rem;
       color: #4a4a4a;
     }
-
+    .mensaje {
+      text-align: center;
+      padding: 10px;
+      font-style: italic;
+      color: #888;
+    }
     @media print {
       .menu-bar, input, .search-container {
         display: none;
       }
-
       body {
         padding: 0;
       }
-
       .container {
         box-shadow: none;
         margin: 0;
@@ -132,19 +117,18 @@
 <body>
   <div class="menu-bar">
     <img src="logo.png" alt="Logo La Emilia" class="logo">
-    <button onclick="calcularStock()">Calcular Stock</button>
     <button onclick="imprimirTabla()">Imprimir</button>
     <button onclick="window.location.href='inyecciones/etiqueta.html'">Etiqueta</button>
   </div>
 
   <div class="container">
     <h1>Consulta de Stock por Rack y Box</h1>
-    <input type="file" id="fileInput" />
+    <input type="file" id="fileInput" accept=".xls,.xlsx" />
 
     <h2 class="result-title">Resultado de Stock por Rack y Box</h2>
 
     <div class="search-container">
-      <input type="text" id="searchInput" placeholder="Buscar código o descripción..." onkeyup="buscarEnTabla()">
+      <input type="text" id="searchInput" placeholder="Buscar código, descripción, rack o box..." oninput="buscarEnTabla()">
     </div>
 
     <table id="resultTable">
@@ -154,10 +138,12 @@
           <th>Descripción</th>
           <th>Rack</th>
           <th>Box</th>
-          <th>Stock</th>
+          <th>Stock Real</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody>
+        <tr><td class="mensaje" colspan="5">Carga un archivo para ver los resultados</td></tr>
+      </tbody>
     </table>
   </div>
 
@@ -165,6 +151,11 @@
     let datos = [];
 
     document.getElementById('fileInput').addEventListener('change', function (e) {
+      const file = e.target.files[0];
+      if (!file) {
+        console.warn('No se seleccionó archivo');
+        return;
+      }
       const reader = new FileReader();
       reader.onload = function (e) {
         const data = new Uint8Array(e.target.result);
@@ -172,61 +163,87 @@
         const sheetName = workbook.SheetNames[0];
         const worksheet = workbook.Sheets[sheetName];
         datos = XLSX.utils.sheet_to_json(worksheet);
+
+        console.log('Datos cargados:', datos);
+
+        calcularStock();
       };
-      reader.readAsArrayBuffer(e.target.files[0]);
+      reader.readAsArrayBuffer(file);
     });
 
-function calcularStock() {
-  const resultados = {};
-  const excedidos = [];
+    function calcularStock() {
+      if (!datos.length) {
+        mostrarMensaje('No hay datos cargados');
+        return;
+      }
 
-  datos.forEach(item => {
-    const clave = `${item.Codigo}-${item.Rack}-${item.Box}`;
-    if (!resultados[clave]) {
-      resultados[clave] = {
-        Codigo: item.Codigo,
-        Descripción: item.Descripción,
-        Rack: item.Rack,
-        Box: item.Box,
-        Stock: 0
-      };
-    }
+      const resultados = {};
+      let itemsConStock = 0;
 
-    resultados[clave].Stock += (item['Entrada de Stock'] || 0) + (item['Salida de Stock'] || 0);
-  });
+      datos.forEach(item => {
+        const codigo = (item['Codigo'] || '').toString().trim().toUpperCase();
+        const descripcion = (item['Descripción'] || '').toString().trim();
+        const rack = (item['Rack'] || '').toString().trim().toUpperCase();
+        const box = (item['Box'] || '').toString().trim().toUpperCase();
+        const entrada = Math.abs(parseFloat(item['Entrada de Stock']) || 0);
+        const salida = Math.abs(parseFloat(item['Salida de Stock']) || 0);
 
-  const tabla = document.getElementById('resultTable').getElementsByTagName('tbody')[0];
-  tabla.innerHTML = '';
+        if (!codigo || !rack || !box) return;
 
-  Object.values(resultados).forEach(r => {
-    if (r.Stock > 0) {
-      const fila = tabla.insertRow();
-      fila.insertCell().innerText = r.Codigo;
-      fila.insertCell().innerText = r.Descripción;
-      fila.insertCell().innerText = r.Rack;
-      fila.insertCell().innerText = r.Box;
-      fila.insertCell().innerText = r.Stock;
-    }
-  });
-}
+        const clave = `${codigo}|${rack}|${box}`;
 
-    function buscarEnTabla() {
-      const input = document.getElementById('searchInput').value.toLowerCase();
-      const filas = document.getElementById('resultTable').getElementsByTagName('tbody')[0].getElementsByTagName('tr');
-
-      for (let i = 0; i < filas.length; i++) {
-        const celdas = filas[i].getElementsByTagName('td');
-        let mostrar = false;
-
-        for (let j = 0; j < celdas.length; j++) {
-          if (celdas[j].innerText.toLowerCase().includes(input)) {
-            mostrar = true;
-            break;
-          }
+        if (!resultados[clave]) {
+          resultados[clave] = {
+            codigo,
+            descripcion,
+            rack,
+            box,
+            stock: 0
+          };
         }
 
-        filas[i].style.display = mostrar ? '' : 'none';
+        resultados[clave].stock += entrada;
+        resultados[clave].stock -= salida;
+
+        console.log(`Fila: ${codigo} | ${rack} | ${box} => Entrada: ${entrada}, Salida: ${salida}, Stock actual: ${resultados[clave].stock}`);
+      });
+
+      const tbody = document.querySelector('#resultTable tbody');
+      tbody.innerHTML = '';
+
+      Object.values(resultados).forEach(item => {
+        if (item.stock > 0) {
+          itemsConStock++;
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${item.codigo}</td>
+            <td>${item.descripcion}</td>
+            <td>${item.rack}</td>
+            <td>${item.box}</td>
+            <td>${item.stock}</td>
+          `;
+          tbody.appendChild(tr);
+        }
+      });
+
+      if (itemsConStock === 0) {
+        mostrarMensaje('No se encontraron items con stock positivo');
       }
+    }
+
+    function mostrarMensaje(msg) {
+      const tbody = document.querySelector('#resultTable tbody');
+      tbody.innerHTML = `<tr><td class="mensaje" colspan="5">${msg}</td></tr>`;
+    }
+
+    function buscarEnTabla() {
+      const filtro = document.getElementById('searchInput').value.toLowerCase();
+      const filas = document.querySelectorAll('#resultTable tbody tr');
+
+      filas.forEach(fila => {
+        const textoFila = fila.innerText.toLowerCase();
+        fila.style.display = textoFila.includes(filtro) ? '' : 'none';
+      });
     }
 
     function imprimirTabla() {
