--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 "ABV302C-T":"ASIENTO V302C",
 "ASJOY300-T":"ASIENTO JOYRIDE 300",
 "ATSLALOMP110":"ASIENTO SLALOM P110",
+"AMBPSC150RE-T":"ASIENTO SC150RE",
 "AISPOT-T":"ASIENTO SPOT S150",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
@@ -443,3 +444,4 @@ const data = {
     </script>
 </body>
 </html>
+
