--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     const productos = {
 "MPR36":"PORTA TABLERO NUEVO (A) HOMOPOLÍMERO",
+"MPR36-":"PORTA TABLERO PP",
 "MPR46":"CUBRECADENAS (A)",
 "MPR11":"GUARDABARROS TRASERO (A) BLITZ",
 "MPR394":"BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
@@ -183,8 +184,8 @@
 "MPR539":"Lateral Homo I/D (AZUL) BLITZ",
 "MPR531":"Porta optica Homo (AZUL) BLITZ",
 "MPR535":"Guardabarro delantero Homo (AZUL) BLITZ",
-"MPR410":"Laterales (Blancos) con calco Durban",
-"MPR409":"Laterales (Blancos) con calco Durban",
+"MPR410D":"Laterales (Blancos) con calco Durban",
+"MPR409D":"Laterales (Blancos) con calco Durban",
 "INY410":"Laterales (Blancos)",
 "INY409":"Laterales (Blancos)",
 "MPR443":"Laterales (arena) con calco Skua",
@@ -193,23 +194,23 @@
 "INY444":"Cubre tanque (arena)",
 "MPR448":"Laterales (Azul) con calco Skua",
 "INY448":"Laterales (Azul)",
-"MPR329":"Cubre tanque (Azul) con calco Skua",
-"MPR330":"Cubre tanque (Azul) con calco Skua",
-"MPR330-":"Cubre tanque (Azul) con calco Durban",
+"MPR329-":"Cubre tanque (Azul) con calco Skua",
+"MPR330-":"Cubre tanque (Azul) con calco Skua",
+"MPR330D":"Cubre tanque (Azul) con calco Durban",
 "INY329":"Cubre tanque (Azul)",
 "INY330":"Cubre tanque (Azul)",
 "MPR451":"Laterales (Rojo) con calco Skua",
 "INY451":"Laterales (Rojo)",
-"MPR324":"Cubre tanque (Rojo) con calco Skua",
-"MPR325":"Cubre tanque (Rojo) con calco Skua",
-"MPR325-":"Cubre tanque (Rojo) con calco Durban",
+"MPR324-":"Cubre tanque (Rojo) con calco Skua",
+"MPR325-":"Cubre tanque (Rojo) con calco Skua",
+"MPR325D":"Cubre tanque (Rojo) con calco Durban",
 "INY324":"Cubre tanque (Rojo)",
 "INY325":"Cubre tanque (Rojo)",
-"MPR454":"Laterales (Negro) con calco Skua",
+"MPR454-":"Laterales (Negro) con calco Skua",
 "INY454":"Laterales (Negro)",
-"MPR209":"Cubre tanque (Negro) con calco Skua",
-"MPR313":"Cubre tanque (Negro) con calco Skua",
-"MPR313-":"Cubre tanque (Negro) con calco Durban",
+"MPR209-":"Cubre tanque (Negro) con calco Skua",
+"MPR313-":"Cubre tanque (Negro) con calco Skua",
+"MPR313D":"Cubre tanque (Negro) con calco Durban",
 "INY209":"Cubre tanque (Negro)",
 "INY313":"Cubre tanque (Negro)",
 "PIN383":"Cubrebarral izquierdo (NEGRO) ABS",
@@ -272,8 +273,8 @@
 "ABV302C-T":"ASIENTO V302C",
 "ASJOY300-T":"ASIENTO JOYRIDE 300",
 "ATSLALOMP110":"ASIENTO SLALOM P110",
-"AMBPSC150RE-T":"ASIENTO SC150RE",
 "AISPOT-T":"ASIENTO SPOT S150",
+"AMBPSC150RE-T":"ASIENTO SC150RE",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -378,12 +379,6 @@
 "45700P250000":"ABS",
 "299053090030":"CDI",
 "299066570000":"REGULADOR DE VOLTAJE",
-"CH0001": "Chasis",
-"MO0001": "Motores",
-"BU0001": "Buloneria",
-"PA0001": "Partes Comunes",
-"BA0001": "Bateria",
-
     };
 
 document.getElementById('codigo').addEventListener('input', function () {
@@ -444,4 +439,5 @@ const data = {
     </script>
 </body>
 </html>
+
 
