--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@
 "MPR539":"Lateral Homo I/D (AZUL) BLITZ",
 "MPR531":"Porta optica Homo (AZUL) BLITZ",
 "MPR535":"Guardabarro delantero Homo (AZUL) BLITZ",
-"MPR410D":"Laterales (Blancos) con calco Durban",
-"MPR409D":"Laterales (Blancos) con calco Durban",
+"MPR410D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
+"MPR409D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
+"MPR410DA":"Laterales blancos con calco Durban (Moto azul)",
+"MPR409DA":"Laterales blancos con calco Durban (Moto azul)",  
 "INY410":"Laterales (Blancos)",
 "INY409":"Laterales (Blancos)",
 "MPR443":"Laterales (arena) con calco Skua",
@@ -439,5 +441,6 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
