--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
 "AISPOT-T":"ASIENTO SPOT S150",
 "AMBPSC150RE-T":"ASIENTO SC150RE",
 "ATDURBAN150-T":"ASIENTO DURBAN 150",
+"AIDURBAN150-T":"ASIENTO DURBAN 150",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -442,6 +443,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
