--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
 "ABRK150-T":"ASIENTO RK150",
 "ABKLIGHT202-T":"ASIENTO KLIGHT 202",
 "ABV302C-T":"ASIENTO V302C",
+"AB302S-T":"ASIENTO 302S",
 "ASJOY300-T":"ASIENTO JOYRIDE 300",
 "ATSLALOMP110":"ASIENTO SLALOM P110",
 "AISPOT-T":"ASIENTO SPOT S150",
@@ -444,6 +445,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
