--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 "MPR128":"BASE DE ASIENTOS",
 "MPR10":"POLLERA (B)",
 "MPR395":"POLLERA (A) PLÁSTICOS NACIONALES",
-"MPR12":"BAULERA (B)",
+"MPR12":"BAULERA (A)",
 "MPR389":"BAULERA (B) PLUS",
 "MPR15":"TAPA BATERÍA ALTA",
 "MPR9":"TAPA N° DE CHASIS (B)",
@@ -445,6 +445,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
