--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
 "MPR539":"Lateral Homo I/D (AZUL) BLITZ",
 "MPR531":"Porta optica Homo (AZUL) BLITZ",
 "MPR535":"Guardabarro delantero Homo (AZUL) BLITZ",
+"MPR569":"Lateral I/D (GRIS) BLITZ",
+"MPR567":"Guardabarro delantero (GRIS) BLITZ",
 "MPR410D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
 "MPR409D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
 "MPR410DA":"Laterales blancos con calco Durban (Moto azul)",
@@ -445,6 +447,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
