--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 "MPR535":"Guardabarro delantero Homo (AZUL) BLITZ",
 "MPR569":"Lateral I/D (GRIS) BLITZ",
 "MPR567":"Guardabarro delantero (GRIS) BLITZ",
+"MPR563":"Escudo (GRIS) BLITZ",
 "MPR410D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
 "MPR409D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
 "MPR410DA":"Laterales blancos con calco Durban (Moto azul)",
@@ -447,6 +448,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
