--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 "ATDURBAN150-T":"ASIENTO DURBAN 150",
 "AIDURBAN150-T":"ASIENTO DURBAN 150",
 "ASORBITIII-T":"ASIENTO ORBIT III 125",
+"ASJETX200-T":"ASIENTO JET X",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -448,6 +449,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
