--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 "MPR567":"Guardabarro delantero (GRIS) BLITZ",
 "MPR563":"Escudo (GRIS) BLITZ",
 "MPR565":"Porta optica (GRIS) BLITZ",
+"MPR561":"Cubrebarral (GRIS) BLITZ",
 "MPR410D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
 "MPR409D":"Laterales (Blancos) con calco Durban (MOTO ROJO/ NEGRO)",
 "MPR410DA":"Laterales blancos con calco Durban (Moto azul)",
@@ -450,6 +451,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
