--- a/index.html
+++ b/index.html
@@ -362,6 +362,8 @@
 "MPR470":"ESPUMA STRATO EURO DELANTERO",
 "MPR471":"ESPUMA STRATO EURO TRASERO",
 "MPR511":"ESPUMA DE ASIENTO SC150RE",
+"GDP":"MATERIAL RETENIDA GDP",
+"VARIOS":"MATERIAL VARIOS",
 "299064010000-INT":"REGULADOR VOLTAJE (2644)",
 "299066060000-INT":"REGULADOR VOLTAJE (2426)",
 "299066080010-INT":"REGULADOR VOLTAJE (N) (2649)",
@@ -451,6 +453,7 @@ const data = {
     </script>
 </body>
 </html>
+
 
 
 
