--- a/buscador.html
+++ b/buscador.html
@@ -217,7 +217,7 @@
        CABECERA SUPERIOR / MENÚ
        =============================== -->
   <div class="menu-bar">
-    <img src="Logo.png" alt="Logo La Emilia" class="logo">
+    <img src="logo.png" alt="Logo La Emilia" class="logo">
 
     <!-- Botones principales -->
     <div class="button-group">
@@ -468,3 +468,4 @@
   </script>
 </body>
 </html>
+
